* FEA#9151 Refactor extra_data code
* BUG#9117 Add missing currency symbol field in product and offered option
* BUG#8960 Fix kind and type french translation on extra data
* BUG#8918 Fix missing reset of default_value in extra data if type_ is not selection or boolean
* BUG#8800 Fix product duplicate

Version 2.0 - 2018-04-13
* BUG#8131 Globally manage coverage ordering
* #BUG7728 Make the default style optional

Version 1.14 - 2017-11-09
* FEA#7234 Enhancement of the product and coverage view. Most useful information are now displayed on the main page
* FEA#7024 Configure default report template style to be added as default letter style in coog
* FEA#6173 Allow to store extra data on package to be used on rule engine (to apply a reduction for example when subscribing a package)

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

* FEA#0000 Allow to define style template on a product for report generation

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Search coverage with product name or code

Version 1.3 - 2015-01-22
* FEA#0000 Add extra_data values validation

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation